# PFGS360

./: .gitignore  README.md  pyproject.toml  run-ob3d.py  run-ricoh360.py
nerfstudio360/: dataparser360_configs.py  nerfstudio360_configs.py
nerfstudio360/dataparsers/: ob3d_dataparser.py  odgs_dataparser.py  openmvg_dataparser.py  opensfm_dataparser.py
nerfstudio360/engines/: nerfstudio360_trainer.py
nerfstudio360/models/: posefree_gaussian_splatting_360.py  posefree_gaussian_splatting_360_base.py
nerfstudio360/pipelines/: colmapfree_pipeline.py  fullimage_pipeline.py
nerfstudio360/utils/: camera_utils.py  colmap_free_utils.py  depth_utils.py  io_utils.py  pose_utils.py
scripts/: OpenMVG_Pipeline_360.py  OpenSfM_Pipeline_360.py  requirements-install.sh
